# radiationPattern

./: CMakeLists.txt  README.md  main.cpp
RadiationPatternQt/: RadiationPattern.cpp  RadiationPatternQt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
inc/: Picture.h  RadiationPattern.h  Signal.h
src/: GaussSignal.cpp  RadiationPattern.cpp  RealSignal.cpp  Signal.cpp  SignalFunctions.cpp  TestSignal.cpp
